src/objects/HR_Case__c.object
<CustomObject>
    <fields>
        <fullName>HRM_Office__c</fullName>
        <label>HR Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CHW</fullName>
                </value>
                <value>
                    <fullName>CHS</fullName>
                </value>
                <value>
                    <fullName>CHT</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPB</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPE</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CPG</fullName>
                </value>
                <value>
                    <fullName>CPH</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>CPJ</fullName>
                </value>
                <value>
                    <fullName>CPK</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>CSSA</fullName>
                </value>
                <value>
                    <fullName>CSSB</fullName>
                </value>
                <value>
                    <fullName>CSSC</fullName>
                </value>
                <value>
                    <fullName>CSSW</fullName>
                </value>
                <value>
                    <fullName>CSS1</fullName>
                </value>
                <value>
                    <fullName>CSSX</fullName>
                </value>
                <value>
                    <fullName>CMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Office_of_Assigned_Specialist__c</fullName>
        <label>HR Office of Assigned Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CHW</fullName>
                </value>
                <value>
                    <fullName>CHS</fullName>
                </value>
                <value>
                    <fullName>CHT</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPB</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPE</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CPG</fullName>
                </value>
                <value>
                    <fullName>CPH</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>CPJ</fullName>
                </value>
                <value>
                    <fullName>CPK</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>CSSA</fullName>
                </value>
                <value>
                    <fullName>CSSB</fullName>
                </value>
                <value>
                    <fullName>CSSC</fullName>
                </value>
                <value>
                    <fullName>CSSW</fullName>
                </value>
                <value>
                    <fullName>CSS1</fullName>
                </value>
                <value>
                    <fullName>CSSX</fullName>
                </value>
                <value>
                    <fullName>CMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Organization_Code_Sub_Code__c</fullName>
        <formula>HRM_Named_Employee__r.Contact_GSA_Short_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Code/Sub-Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Other_Grievance_Arbitration__c</fullName>
        <label>Other Grievance/Arbitration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EX</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>WG</fullName>
                </value>
                <value>
                    <fullName>WL</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Position_Grade__c</fullName>
        <label>Position Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Position_Series__c</fullName>
        <label>Position Series</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0018</fullName>
                </value>
                <value>
                    <fullName>0020</fullName>
                </value>
                <value>
                    <fullName>0028</fullName>
                </value>
                <value>
                    <fullName>0080</fullName>
                </value>
                <value>
                    <fullName>0086</fullName>
                </value>
                <value>
                    <fullName>0089</fullName>
                </value>
                <value>
                    <fullName>0099</fullName>
                </value>
                <value>
                    <fullName>0110</fullName>
                </value>
                <value>
                    <fullName>0132</fullName>
                </value>
                <value>
                    <fullName>0201</fullName>
                </value>
                <value>
                    <fullName>0203</fullName>
                </value>
                <value>
                    <fullName>0260</fullName>
                </value>
                <value>
                    <fullName>0299</fullName>
                </value>
                <value>
                    <fullName>0301</fullName>
                </value>
                <value>
                    <fullName>0303</fullName>
                </value>
                <value>
                    <fullName>0305</fullName>
                </value>
                <value>
                    <fullName>0306</fullName>
                </value>
                <value>
                    <fullName>0318</fullName>
                </value>
                <value>
                    <fullName>0326</fullName>
                </value>
                <value>
                    <fullName>0335</fullName>
                </value>
                <value>
                    <fullName>0340</fullName>
                </value>
                <value>
                    <fullName>0341</fullName>
                </value>
                <value>
                    <fullName>0342</fullName>
                </value>
                <value>
                    <fullName>0343</fullName>
                </value>
                <value>
                    <fullName>0344</fullName>
                </value>
                <value>
                    <fullName>0350</fullName>
                </value>
                <value>
                    <fullName>0360</fullName>
                </value>
                <value>
                    <fullName>0391</fullName>
                </value>
                <value>
                    <fullName>0392</fullName>
                </value>
                <value>
                    <fullName>0399</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Position_Title__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Proposed_Type_of_Action__c</fullName>
        <label>Proposed Type of Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning Notice</fullName>
                </value>
                <value>
                    <fullName>Reprimand</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
                <value>
                    <fullName>Demotion</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Reassignment</fullName>
                </value>
                <value>
                    <fullName>Denial WIGI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Proposing_Offical_RMO__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter Last Name, First</inlineHelpText>
        <label>Proposing Official/RMO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (Proposing Offical/RMO)</relationshipLabel>
        <relationshipName>CPO_Proposing_Offical_RMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Action_Appealed__c</fullName>
        <label>RA Action Appealed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_BU_Status__c</fullName>
        <label>RA BU Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGE</fullName>
                </value>
                <value>
                    <fullName>NFFE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Bargaining_Unit__c</fullName>
        <label>RA Bargaining Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Comments__c</fullName>
        <inlineHelpText>Caution - Limit to 250 characters and may be viewed by others.</inlineHelpText>
        <label>RA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Cost_of_Equipment__c</fullName>
        <inlineHelpText>Only number characters are accepted; units: USD</inlineHelpText>
        <label>RA Cost of Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Additional_Medical_Received__c</fullName>
        <label>RA Date Additional Medical Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Additional_Medical_Requested__c</fullName>
        <label>RA Date Additional Medical Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_CAP_Response_Received__c</fullName>
        <label>RA Date CAP Response Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Employee_Response_Due__c</fullName>
        <label>RA Date Employee Response Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_FOH_Medical_Returned__c</fullName>
        <label>RA Date FOH Medical Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_FOH_Medical_Submitted__c</fullName>
        <label>RA Date FOH Medical Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Final_Letter_to_Supervisor__c</fullName>
        <label>RA Date Final Decision Ltr to Supervisor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Initial_Draft_to_MGMT__c</fullName>
        <label>RA Date Initial Draft to MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_MGMT_HR_Agree_to_Action__c</fullName>
        <inlineHelpText>Enter date HR and Management agree to proceed with action.</inlineHelpText>
        <label>RA Date MGMT &amp; HR Agree to Decided Actn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Medical_Received__c</fullName>
        <label>RA Date Medical Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Medical_Requested__c</fullName>
        <label>RA Date Medical Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_OGC_Returned_Draft__c</fullName>
        <label>RA Date OGC Returned Draft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Reconsideration_Received__c</fullName>
        <label>RA Date Reconsideration Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_Sent_to_CAP__c</fullName>
        <label>RA Date Sent to CAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_of_Appeal__c</fullName>
        <label>RA Date of Appeal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Date_to_OGC_for_Concurrence__c</fullName>
        <label>RA Date to OGC for Concurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Deciding_Official_RMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter Last Name, First</inlineHelpText>
        <label>RA Deciding Official/RMO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (RA Deciding Official/RMO)</relationshipLabel>
        <relationshipName>CPO_RA_Deciding_Official_RMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Decision__c</fullName>
        <label>RA Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Approved (A)</fullName>
                </value>
                <value>
                    <fullName>Approved with Modification (AM)</fullName>
                </value>
                <value>
                    <fullName>Denied (D)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Description_Other__c</fullName>
        <label>RA Description Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Description_of_Denial__c</fullName>
        <label>RA Description of Denial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Disposition_of_Appeal__c</fullName>
        <label>RA Disposition of Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Sustained</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Draft_Concurrence_Recieved_MGMT__c</fullName>
        <label>RA Draft Concurrence Received from MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_FOH_Control_No__c</fullName>
        <label>RA FOH Control #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Final_Letter_to_Employee_Union__c</fullName>
        <label>RA Final Decision Ltr to Employee/Union</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_RA_If_Approved_Description__c</fullName>
        <inlineHelpText>If Approved, description of approved accommodation.</inlineHelpText>
        <label>RA If &quot;Approved,&quot; Accommodation Desc.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_RA_If_Denied_Reason_for_Denial__c</fullName>
        <label>RA If &quot;Denied,&quot; Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undue hardship</fullName>
                </value>
                <value>
                    <fullName>Insufficient medical documentation</fullName>
                </value>
                <value>
                    <fullName>Removal of essential function</fullName>
                </value>
                <value>
                    <fullName>Lowers standards</fullName>
                </value>
                <value>
                    <fullName>Direct Threat</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Other_Reason_for_Denial__c</fullName>
        <label>RA Other Reason for Denial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_RA_Request_Associated_with_App__c</fullName>
        <label>RA Is Request Associated w/Application?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Requested_Accomm_Type__c</fullName>
        <label>RA Requested Accommodation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assisted Technology</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Adjustment/Change</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Needs Assessment</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Reader</fullName>
                </value>
                <value>
                    <fullName>Staff Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Result_of_Reconsideration__c</fullName>
        <label>RA Result of Reconsideration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sustained</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_RA_Type_of_Appeal_Action__c</fullName>
        <label>RA Type of Appeal Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>MSPB</fullName>
                </value>
                <value>
                    <fullName>Grievance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_ROO_AO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsible Office Official or Action Officer</inlineHelpText>
        <label>ROO/AO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPO_Action_Officer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_Region__c</fullName>
        <formula>HRM_Named_Employee__r.Contact_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Result_of_PIP__c</fullName>
        <label>Result of PIP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Result_of_Reconsideration__c</fullName>
        <label>Result of Reconsideration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sustained</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_T_Name_of_Representative__c</fullName>
        <label>Name of Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Total_Days_Initial_Prop_Draft_to_OGC__c</fullName>
        <formula>(HRM_Date_to_OGC_for_Prop_Concurrence__c - HRM_Date_Initial_Prop_Draft_to_MGMT__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days: Initial Prop Draft to OGC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_Days_Prop_Issuance_to_Employee__c</fullName>
        <formula>(HRM_Final_Proposal_Ltr_to_Employee_Union__c - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days: Prop Issuance to Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_Days_Prop_Submitted_to_Sup__c</fullName>
        <formula>( HRM_Date_Proposal_Final_Letter_to_Sup__c - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c ) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days: Prop Submitted to Supervisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_Days_Proposal_in_OGC__c</fullName>
        <formula>( HRM_Date_OGC_Returned_Prop_Draft__c   -   HRM_Date_to_OGC_for_Prop_Concurrence__c ) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days: Proposal in OGC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_Days_in_Process__c</fullName>
        <formula>IF(ISPICKVAL( Status__c, &apos;Open&apos;), IF( OR(RecordType.DeveloperName == &apos;HRM_Disciplinary_Case&apos;, RecordType.DeveloperName == &apos;HRM_Performance_Case&apos;), IF(TODAY() == HRM_Date_MGMT_HR_Agree_to_Prop_Action__c, 1, (TODAY() - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c)+1), 
IF( OR(RecordType.DeveloperName == &apos;HRM_Grievances_and_Arbitration_Case&apos;, RecordType.DeveloperName == &apos;HRM_OIG_Case&apos;, RecordType.DeveloperName == &apos;HRM_Reasonable_Accommodation_RA_Case&apos;),
IF(TODAY() == HRM_Date_Received__c, 1, (TODAY() - HRM_Date_Received__c)+1),
IF( RecordType.DeveloperName == &apos;HRM_Medical_Case&apos;, IF(TODAY() == HRM_Date_MGMT_HR_Agree_to_Action__c , 1, (TODAY() - HRM_Date_MGMT_HR_Agree_to_Action__c)+1),0))), IF( OR(RecordType.DeveloperName == &apos;HRM_Disciplinary_Case&apos;, RecordType.DeveloperName == &apos;HRM_Performance_Case&apos;), (HRM_Date_of_Final_Letter_to_Supervisor__c - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c)+1, IF( OR(RecordType.DeveloperName == &apos;HRM_Grievances_and_Arbitration_Case&apos;, RecordType.DeveloperName == &apos;HRM_OIG_Case&apos;), (HRM_Date_of_Final_Letter_to_Supervisor__c - HRM_Date_Received__c)+1,
IF( RecordType.DeveloperName == &apos;HRM_Medical_Case&apos;, (HRM_Date_of_Final_Letter_to_Supervisor__c - HRM_Date_MGMT_HR_Agree_to_Action__c
)+1, IF( RecordType.DeveloperName == &apos;HRM_Reasonable_Accommodation_RA_Case&apos;, (HRM_RA_Date_Final_Letter_to_Supervisor__c - HRM_Date_Received__c
)+1,0)))))</formula>
        <label>Total # of Days in Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_No_Days_Initial_Draft_to_OGC__c</fullName>
        <formula>(HRM_Date_to_OGC_for_Concurrence__c - HRM_Date_Initial_Draft_to_MGMT__c)  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Days: Initial Draft to OGC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_No_Days_Issuance_to_Employee__c</fullName>
        <formula>(HRM_Final_Decision_Letter_to_Emp_Union__c - HRM_Date_MGMT_HR_Agree_to_Action__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Days: Issuance to Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_No_Days_Submitted_to_Sup__c</fullName>
        <formula>(HRM_Date_of_Final_Letter_to_Supervisor__c - HRM_Date_MGMT_HR_Agree_to_Action__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Days: Submitted to Supervisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Total_No_Days_in_OGC__c</fullName>
        <formula>(HRM_Date_OGC_Returned_Draft__c - HRM_Date_to_OGC_for_Concurrence__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Days: In OGC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>